--- a/index.html
+++ b/index.html
@@ -2,10 +2,96 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta content="author: Xinhai_Xu">
+
     <title>In class Exercise Numero Uno</title>
+
     <link rel="stylesheet" href="./css/icOne.css">
+
   </head>
+  <style>
+    .floatImg{
+      float: left;
+      margin: 5px 5px 15px 15px
+    }
+  </style>
   <body>
 
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html"><img src="./img/home.png" height="30px" width="30px" /></a>
+          </li>
+          <li>
+            <a href="#">About</a>
+          </li>
+          <li>
+            <a class="pseudoDemo" href="#" target="_blank">Example of pseudo class</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section id="Section1">
+      <p class="paragraph">
+        Here is one character entity: &amp;
+        Here is another character entity: &ast;
+        Here is one more character entity: &dollar;
+      </p>
+    </section>
+
+    <section id="Section2">
+      <p class="paragraph">
+        <img class="floatImg" src="./img/scream.png" height="100px" weight="100px">
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+        Text float around the image by in doc style. Text float around the image by in doc style.
+      </p>
+    </section>
+
+    <section id="Section3">
+      <p class="paragraph" style="color:green;">
+        This is an example of inline style. And this is <b>contextual</b> style.
+        <h1 class="demoHeader">Example of text alignment and display type</h1>
+      </p>
+    </section>
+
+    <form method="get" action="/">
+      <fieldset class="name">
+        <label>Name: <input type="text"></label>
+        <input type="submit" value="submit">
+      </fieldset>
+      <fieldset class="email">
+        <label>E-Mail: <input type="text"></label>
+        <input type="submit" value="submit">
+      </fieldset>
+      <fieldset class="extra">
+        <input type="checkbox" value="no" name="no_select">
+        <label for="no_select">Click me</label>
+      </fieldset>
+    </form>
+    <footer>
+      <small class="cp">@ Copyright 2099, Xinhai Xu</small>
+    </footer>
   </body>
 </html>
